--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,7 +3,7 @@ kind: Config
 build:
   tagPolicy:
     envTemplate:
-      template: "{{.DOCKER_REGISTRY}}/jamesob131/golang2:{{.VERSION}}"
+      template: "{{.DOCKER_REGISTRY}}/ppdpoc2018/golang2:{{.VERSION}}"
   artifacts:
   - imageName: changeme
     workspace: .
@@ -17,7 +17,7 @@ profiles:
   build:
     tagPolicy:
       envTemplate:
-        template: "{{.DOCKER_REGISTRY}}/jamesob131/golang2:{{.DIGEST_HEX}}"
+        template: "{{.DOCKER_REGISTRY}}/ppdpoc2018/golang2:{{.DIGEST_HEX}}"
     artifacts:
     - docker: {}
     local: {}
@@ -27,5 +27,5 @@ profiles:
       - name: golang2
         chartPath: charts/golang2
         setValueTemplates:
-          image.repository: "{{.DOCKER_REGISTRY}}/jamesob131/golang2"
+          image.repository: "{{.DOCKER_REGISTRY}}/ppdpoc2018/golang2"
           image.tag: "{{.DIGEST_HEX}}"
